--- a/notebooks/BindCraft.ipynb
+++ b/notebooks/BindCraft.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/priya-090805/PRIYA/blob/main/notebooks/BindCraft.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "MTagjooX0XC1"
       },
       "source": [
@@ -89,22 +99,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 9,
       "metadata": {
-        "cellView": "form",
         "id": "RbL-S_t2hicj",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dda4c90c-c64e-4cfd-9dd3-fa79028b745c"
+        "outputId": "65d01611-63e0-405f-c4ac-f256f90c9e3a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Binder design settings updated at: 2025-12-10 04:25:31\n",
-            "New .json file with target settings has been generated in: /content/drive/MyDrive/BindCraft/CML_target_settings.json\n"
+            "Binder design settings updated at: 2025-12-10 04:38:13\n",
+            "New .json file with target settings has been generated in: /content/drive/MyDrive/BindCraft/PDL1/ CEL-PEP-RAGE V.json\n"
           ]
         }
       ],
@@ -133,7 +142,7 @@
         "number_of_final_designs = 100 # @param {\"type\":\"integer\",\"placeholder\":\"100\"}\n",
         "# @markdown ---\n",
         "# @markdown Enter path on your Google drive (/content/drive/MyDrive/BindCraft/[binder_name].json) to previous target settings to continue design campaign. If left empty, it will use the settings above and generate a new settings json in your design output folder.\n",
-        "load_previous_target_settings = \"/content/drive/MyDrive/BindCraft/CML_target_settings.json\" # @param {\"type\":\"string\",\"placeholder\":\"\"}\n",
+        "load_previous_target_settings = \"\" # @param {\"type\":\"string\",\"placeholder\":\"\"}\n",
         "# @markdown ---\n",
         "\n",
         "from datetime import datetime\n",
@@ -172,13 +181,27 @@
     {
       "cell_type": "code",
       "source": [
-        "!find /content -name \"*CML*json\"\n"
+        "!ls \"/content/drive/MyDrive/BindCraft/PDL1\"\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "Lzbw7ANGhWVr"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Lzbw7ANGhWVr",
+        "outputId": "438e7e5a-c197-4e3c-eb3a-20be004dbcff"
       },
-      "execution_count": 4,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "' CEL-PEP-RAGE V.json'\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -896,7 +919,8 @@
     "colab": {
       "gpuType": "T4",
       "machine_shape": "hm",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
